--- a/v1/index.html
+++ b/v1/index.html
@@ -6,6 +6,7 @@
     <title>Template Blog</title>
     <link rel="stylesheet" href="css/style.css">
     <script src="js/marked.min.js"></script>
+    <script src="js/js-yaml.js"></script>
     <script src="js/main.js"></script>
 </head>
 <body>
