--- a/v1/index.html
+++ b/v1/index.html
@@ -10,7 +10,9 @@
     <script src="js/main.js"></script>
 </head>
 <body>
+    <div id="yamlClass">
     <h1>Template Blog</h1>
     <div id="content"></div>
+    </div>
 </body>
 </html>
