--- a/v1/index.html
+++ b/v1/index.html
@@ -10,9 +10,16 @@
     <script src="js/main.js"></script>
 </head>
 <body>
-    <div id="yamlClass">
-    <h1>Template Blog</h1>
-    <div id="content"></div>
+    <div>
+        <h1>Template</h1>
+        <div id="content"></div>
+        <div id="sidebar">
+            <ul>
+                <li>Test</li>
+                <li>Test 2</li>
+                <li>Test 3</li>
+            </ul>
+        </div>
     </div>
 </body>
 </html>
