Multi-file refactor of scss & working-ish style

--- a/v1/index.html
+++ b/v1/index.html
@@ -15,7 +15,7 @@
 <body>
     <div>
         <div class="titlebar">
-            <a href="#" page="home">
+            <a class="internal-link" href="" page="Home">
                 <h1 class="title">Template</h1>
                 <canvas class="logo"></canvas>
             </a>
