--- a/v1/index.html
+++ b/v1/index.html
@@ -30,6 +30,7 @@
         <div id="sidebar">
         </div>
         <div id="content"></div>
+        <div id="bottom-bar"></div>
     </div>
 </body>
 </html>
