--- a/v1/index.html
+++ b/v1/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Template Blog</title>
+    <title>Craftidore's Blog</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/prism.css">
     <noscript>Please enable javascript in your browser to view the contents of this page.</noscript>
@@ -16,7 +16,7 @@
     <div>
         <div class="titlebar">
             <a class="internal-link" href="" page="Home">
-                <h1 class="title">Template</h1>
+                <div class="title">Craftidore's Blog</div>
                 <canvas class="logo"></canvas>
             </a>
             <div class="hamburger-menu" id="hamburger-menu">
